# fiddler

./: .gitignore  AUTHORS.md  Cargo.toml  README.md  build.rs  make_data.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
base/: Cargo.toml
base/scripts/: create_squares.py  zobrist.py
base/src/: algebraic.rs  bitboard.rs  board.rs  castling.rs  color.rs  direction.rs  eval.rs  game.rs  lib.rs  magic.rs  movegen.rs  moves.rs  perft.rs  piece.rs  position.rs  square.rs  zobrist.rs
base/src/movegen/: mod.rs  tests.rs
base/src/uci/: mod.rs  parse.rs  send.rs
books/: 2moves_v2.pgn  README.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
engine/: Cargo.toml  build.rs
engine/src/: candidacy.rs  cli.rs  config.rs  evaluate.rs  fens.rs  greedy.rs  lib.rs  limit.rs  main.rs  material.rs  pick.rs  pst.rs  search.rs  thread.rs  time.rs  transposition.rs
engine/src/base/: algebraic.rs  bitboard.rs  board.rs  color.rs  eval.rs  game.rs  magic.rs  mod.rs  movegen.rs  moves.rs  perft.rs  piece.rs  position.rs  square.rs
engine/src/engine/: config.rs  evaluate.rs  greedy.rs  pick.rs  pst.rs  search.rs  thread.rs  transposition.rs
engine/src/evaluate/: material.rs  mobility.rs  mod.rs  pst.rs
engine/src/uci/: mod.rs  parse.rs  send.rs
scripts/: create_squares.py  train.py  zobrist.py
src/: algebraic.rs  bitboard.rs  board.rs  castling.rs  cli.rs  constants.rs  direction.rs  fens.rs  game.rs  lib.rs  magic.rs  main.rs  move.rs  movegen.rs  moves.rs  piece.rs  square.rs  tuning.rs  util.rs  zobrist.rs
src/base/: algebraic.rs  bitboard.rs  board.rs  castling.rs  color.rs  constants.rs  direction.rs  eval.rs  fens.rs  game.rs  magic.rs  mod.rs  movegen.rs  moves.rs  perft.rs  piece.rs  position.rs  square.rs  util.rs  zobrist.rs
src/base/movegen/: magic.rs  mod.rs  pext.rs  tests.rs
src/engine/: candidacy.rs  config.rs  eval.rs  evaluate.rs  greedy.rs  limit.rs  main.rs  minimax.rs  mod.rs  perft.rs  pick.rs  positional.rs  pst.rs  search.rs  thread.rs  time.rs  transposition.rs  tune.rs  uci.rs
src/engine/evaluate/: material.rs  mobility.rs  mod.rs  pst.rs  safety.rs
src/engine/uci/: mod.rs  send.rs
src/uci/: engine.rs  main.rs  mod.rs  parse.rs  send.rs
tuner/: Cargo.toml  README.md
tuner/src/: main.rs
uci/: Cargo.toml
uci/src/: lib.rs  parse.rs  send.rs
