# Fiddler, a UCI-compatible chess engine.
# Copyright (C) 2022 Clayton Ramsey.

# Fiddler is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# Fiddler is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "fiddler"
version = "0.1.0"
edition = "2021"
authors = ["Clayton Ramsey"]
default-run = "fiddler"
description = "UCI-compatible chess engine created as a hobby project by Clayton Ramsey"
license = "GPL-3.0-or-later"
repository = "https://github.com/claytonwramsey/fiddler"
keywords = ["chess", "chess engine", "uci"]
categories = ["game-engines"]

[profile.test]
debug = true
# must be highly optimized for speed, since searching and perft is done in tests
opt-level = 3 
# lto = true

[profile.release]
opt-level = 3
lto = true
debug = false
overflow-checks = false
codegen-units = 1
panic = "abort"

[[bin]]
name = "wizard"
debug = true