[package]
name = "fiddler_base"
version = "0.1.0"
edition = "2018"
authors = ["Clayton Ramsey"]

[lib]

[dependencies]
# Random number generator for creating magic bitboards.
rand = "0.8.4" 
# Handy macro, mostly used for movegen lookup tables.
lazy_static = "1.4.0"
# More efficient hash map for move repetition checking
nohash-hasher = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html