# Fiddler, a UCI-compatible chess engine.
# Copyright (C) 2022 The Fiddler Authors (see AUTHORS.md file)

# Fiddler is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# Fiddler is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "fiddler_base"
version = "0.1.0"
edition = "2021"
authors = ["Clayton Ramsey"]

[lib]

[dependencies]
# Random number generator for creating magic bitboards.
rand = "0.8.4" 
# Handy macro, mostly used for movegen lookup tables.
lazy_static = "1.4.0"
# More efficient hash map for move repetition checking
nohash-hasher = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html