[package]
name="fiddler_tuner"
version = "0.1.0"
edition = "2018"
authors = ["Clayton Ramsey"]

[dependencies]
fiddler_engine = {path = "../engine"}
fiddler_base = {path = "../base"}
libm = "0.1.4"
rusqlite = {version = "0.27.0", features = ["bundled"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html